revert: change command from yarn to pnpm

--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx}": [
-      "yarn lint",
-      "yarn format"
+      "pnpm lint",
+      "pnpm format"
     ]
   }
 }
