--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,8 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
-next-env.d.ts
+
+# uncomment line below after clone
+# next-env.d.ts
+
 pnpm-lock.yaml
