--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "framer-motion": "^7.4.0",
+    "leaflet": "^1.9.1",
     "next": "12.3.1",
     "next-pwa": "^5.6.0",
     "next-seo": "^5.5.0",
@@ -22,12 +25,18 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "tailwind-scrollbar-hide": "^1.1.7"
+    "react-leaflet": "^4.1.0",
+    "sharp": "^0.31.1",
+    "supercluster": "^7.1.5",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "use-supercluster": "^0.4.0",
+    "zustand": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.1",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@types/leaflet": "^1.8.0",
     "@types/node": "18.7.23",
     "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.21",
